deploy/minikube/iam-monitor-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-monitor-api
  namespace: musinsa
  labels:
    app: iam-monitor
    component: api
spec:
  type: ClusterIP
  selector:
    app: iam-monitor
    component: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
