deploy/minikube/iam-monitor-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-monitor-web
  namespace: musinsa
  labels:
    app: iam-monitor
    component: web
spec:
  type: NodePort
  selector:
    app: iam-monitor
    component: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30002
