deploy/minikube/iam-monitor-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-monitor-web-ingress
  namespace: musinsa
  labels:
    app: iam-monitor
    component: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: musinsa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iam-monitor-web
            port:
              number: 80
